# lookout

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  LIVE_TESTING.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: LIVE_TESTING.md  arguments.md  container-selection.md  index.md  lifecycle-hooks.md  limitations.md  linked-containers.md  notifications.md  private-registries.md
lookout/: __init__.py  cli.py  config.py  scheduler.py
lookout/core/: filter.py  lifecycle.py  session.py  updater.py
lookout/docker/: client.py  container.py  recreate.py
lookout/notifications/: notify.py
lookout/registry/: auth.py  digest.py
testing/mutator/: Dockerfile  README.md  push.sh  verify.sh  watch.sh
tests/: test_auth.py  test_cli.py  test_config.py  test_container.py  test_digest.py  test_filter.py  test_notify.py  test_recreate.py  test_scheduler.py  test_session.py  test_updater.py
tests/fixtures/inspect/: README.md  comprehensive.json  minimal.json  selinux-relabel.json  static-ip-mac.json
