[project]
name = "lookout"
version = "0.9.0"
description = "Automatic Docker container updates — a Python reimplementation of Watchtower"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "click>=8.1",
    "apprise>=1.9",
]

[project.scripts]
lookout = "lookout.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-docker>=7.1.0.20260712",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lookout"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
